modify .gitignore to push to github

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,18 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
+/db/*.sqlite3 
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
+/log/*.log 
 /tmp
+
+# Ignore other unneeded files.
+doc/ 
+*.swp 
+*~ 
+.project .
+DS_Store 
+.idea
+.secret
